test/spec_vectors/simd_i16x8_extmul_i8x16/fail/module_2.wat
(module (func (result v128) (i16x8.extmul_high_i8x16_s (i32.const 0) (f32.const 0.0))))